execute serve task in a new terminal window

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,14 @@
             "isBackground": true,
             "options": {
                 "cwd": "${workspaceFolder}/webroot"
-            }
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new"
+            },
+            "problemMatcher": []
         }
     ]
 }
